@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.999 2009-02-18 21:33:09 castaglia Exp $
+$Id: NEWS,v 1.1000 2009-02-20 17:19:02 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -55,6 +55,7 @@ CVS
 - Bug 3129 - Support configurable scoreboard scrubbing.  A new configuration
   directive, ScoreboardScrub, can be used to control whether the ScoreboardFile
   is scrubbed, and how often.
+- Bug 3190 - MLSD/MLST do not honor <Limit> configurations.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
